r8
======
- Sync with FreeBSD
- Sync HAMMER2 with DragonFly BSD
- Sync with https://github.com/relan/exfat
- Add script/image_creat_test.sh
- Add script/image_mount_test.sh

r7
======
- Support FreeBSD, NetBSD, OpenBSD, DragonFly BSD
- Sync HAMMER2 with DragonFly BSD

r6
======
- Add build option USE_HAMMER2=0
- Add script/build_test.sh

r5
======
- Add top level src directory
- Sync with FreeBSD
- Sync with https://github.com/relan/exfat

r4
======
- Port HAMMER2 support from DragonFly BSD makefs(8)

r3
======
- Add exFAT support using https://github.com/relan/exfat
- Add build option USE_EXFAT=0

r2
======
- Port v7fs (Version 7 Unix file system) support from NetBSD makefs(8)

r1
======
- Initial release
- Sync with FreeBSD https://cgit.freebsd.org/src/commit/?id=835ee05f3c754d905099a3500f421dc01fab028f