@@ -1,4 +1,4 @@
-Copyright (c) 2023 Tomohiro Kusumi <tkusumi@netbsd.org>
+Copyright (c) 2022-2023 Tomohiro Kusumi <tkusumi@netbsd.org>
 Copyright (c) 1992-2022 The FreeBSD Project.
 
 Redistribution and use in source and binary forms, with or without
