@@ -42,7 +42,12 @@ struct m_buf *
 getblkx(struct m_vnode *vp, off_t loffset, int size, int blkflags, int slptimeo)
 {
 	struct m_buf *bp;
-	makefs_daddr_t blkno = loffset / DEV_BSIZE;
+	makefs_daddr_t blkno;
+
+	if (vp->v_logical)
+		blkno = -1;
+	else
+		blkno = loffset / DEV_BSIZE; /* fsopts->sectorsize */
 
 	bp = getblk(vp, blkno, size, 0, 0, 0);
 	assert(bp);
@@ -78,17 +83,20 @@ breadx(struct m_vnode *vp, off_t loffset, int size, struct m_buf **bpp)
 	ret = read(bp->b_fs->fd, bp->b_data, bp->b_bcount);
 	if (debug & DEBUG_BUF_BREAD)
 		printf("%s: read vp %p offset 0x%016jx size 0x%jx -> 0x%jx\n",
-			__func__, vp, (intmax_t)bp->b_loffset, bp->b_bcount, ret);
+			__func__, vp, (intmax_t)bp->b_loffset,
+			(intmax_t)bp->b_bcount, (intmax_t)ret);
 
 	if (ret == -1) {
 		err(1, "%s: read vp %p offset 0x%016jx size 0x%jx",
-			__func__, vp, (intmax_t)bp->b_loffset, bp->b_bcount);
+			__func__, vp, (intmax_t)bp->b_loffset,
+			(intmax_t)bp->b_bcount);
 	} else if (ret != bp->b_bcount) {
 		if (debug)
 			printf("%s: read vp %p offset 0x%016jx size 0x%jx -> "
 				"0x%jx != 0x%jx\n",
-				__func__, vp, (intmax_t)bp->b_loffset, bp->b_bcount, ret,
-				bp->b_bcount);
+				__func__, vp, (intmax_t)bp->b_loffset,
+				(intmax_t)bp->b_bcount, (intmax_t)ret,
+				(intmax_t)bp->b_bcount);
 		return (EINVAL);
 	}
 
